<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter</string>
    <string name="press_button">button</string>
    <string name="hello">hello world</string>
    <string name="counter">0</string>
    <string name="toast_button">toast</string>
    <string name="count_button">count</string>
    <string name="random_button">random</string>
    <string name="label">Случайное число между 0 и ${random_number}</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_text">New Fragment</string>
    <string name="fragment_button">Click Me!</string>
    <string name="counterFragment">0</string>
</resources>